--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "./src/index.ts",
-   "type":"module",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "npm install && npx tsc",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,6 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1"
-    
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
