--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "npm install && npx tsc",
+    "start":"node ./dist/index.js",
     "tsc": "tsc"
   },
   "author": "",
